# NubraApp

./: App.tsx  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle  nubra-release.keystore
android/app/src/main/cpp/: CMakeLists.txt  NubraJSI.cpp  TickStore.cpp  TickStore.h
android/app/src/main/java/com/zanskar/nubra/: MainActivity.kt  MainApplication.kt  NubraMarketWebSocketModule.kt  NubraMarketWebSocketPackage.kt  NubraTickCountView.kt  NubraTickCountViewManager.kt  NubraTickDataView.kt  NubraTickDataViewManager.kt  NubraTickStoreJNI.kt  (+1 more)
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
docs/: ARCHITECTURE.md  HLD.md  LLD.md  SYSTEM_DESIGN.md
ios/: Podfile
ios/NubraApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/NubraApp.xcodeproj/: project.pbxproj
ios/NubraApp.xcodeproj/xcshareddata/xcschemes/: NubraApp.xcscheme
src/core/di/: container.ts
src/core/performance/: BackpressureMonitor.ts  TickStoreAccessor.ts
src/core/result/: Result.ts
src/features/navigation/: AppNavigator.tsx
src/features/watchlist/application/: WatchlistState.ts  WatchlistViewModel.ts
src/features/watchlist/data/repositories/: TickRepository.ts  WatchlistRepository.ts
src/features/watchlist/domain/entities/: Watchlist.ts
src/features/watchlist/domain/repositories/: ITickRepository.ts  IWatchlistRepository.ts
src/features/watchlist/domain/useCases/: GetWatchlistUseCase.ts
src/features/watchlist/presentation/: InstrumentDetailSheet.tsx  PriceLineGraph.tsx  TickCountView.tsx  TickDataView.tsx  WatchlistRow.tsx  WatchlistScreen.tsx
